# Qt-CMake-HelloWorld

./: CMakeLists.txt  README.md
